@@ -39,3 +39,10 @@ try:
     import asyncio  # noqa
 except ImportError:
     import trollius as asyncio  # noqa
+
+try:
+    import uvloop
+except ImportError:
+    pass
+else:
+    asyncio.set_event_loop_policy(uvloop.EventLoopPolicy())
