@@ -1,3 +1,9 @@
+qtile 0.10.7, unreleased
+
+   * features
+
+       - Use uvloop if installed
+
 qtile 0.10.6, released 2016-05-24:
     !!! qsh renamed to qshell !!!
         This avoids name collision with other packages
